@@ -47,20 +47,21 @@ class Mixin {
         return isset($this->mixin_methods[$method]) || in_array($method, get_class_methods(get_class($this)));
     }
     
-    public function send($method, $arguments) {
-        if (isset($this->mixin_methods[$method])) {
+    public function send($method, $arguments = array()) {
+        if (!$this->respond_to($method)) {
+            trigger_error('Undefined method '.get_class($this).'::'.$method, E_USER_ERROR);
+        } else if (isset($this->mixin_methods[$method])) {
             $method_call = $this->mixin_methods[$method][count($this->mixin_methods[$method]) - 1].'::'.$method.'(';
-            $arguments_count = count($arguments);
-            if ($arguments_count) {
+            if (count($arguments)) {
                 $method_call .= '$arguments[0]';
-                for ($i = 1; $i < $arguments_count; $i++) {
+                for ($i = 1; $i < count($arguments); $i++) {
                     $method_call .= ', $arguments['.$i.']';
                 }
             }
             $method_call .= ');';
             return eval($method_call);
         } else {
-            trigger_error('Undefined method '.get_class($this).'::'.$method, E_USER_ERROR);
+            return call_user_func_array(array($this, $method), $arguments);
         }
     }
     
@@ -69,7 +70,7 @@ class Mixin {
         echo $caller['function'];
     }
     
-    protected function __call($method, $arguments) {
+    protected function __call($method, $arguments = array()) {
         $this->send($method, $arguments);
     }
     
